# Vulkan-Utility-Libraries

./: .clang-tidy  .gitignore  BUILD.gn  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  README.md  REUSE.toml
.github/workflows/: ci.yml  codegen.yml  format.yml  vul.yml
.reuse/: dep5
docs/: generated_code.md  layer_configuration.md  vulkan_layer_settings.md
include/: CMakeLists.txt
include/vulkan/: vk_dispatch_table_helper.h  vk_enum_string_helper.h  vk_layer_dispatch_table.h
include/vulkan/layer/: vk_layer_settings.h  vk_layer_settings.hpp  vk_layer_settings_ext.h
include/vulkan/utility/: concurrent_unordered_map.h  vk_concurrent_unordered_map.hpp  vk_dispatch_table.h  vk_format_utils.h  vk_safe_struct.h  vk_safe_struct.hpp  vk_safe_struct_utils.h  vk_safe_struct_utils.hpp  vk_small_containers.hpp  vk_struct_helper.hpp  vul_dispatch_table.h
include/vulkan/utility/experimental/: vk_function_loader.hpp
layer_utils/: CMakeLists.txt  vk_layer_settings.cpp  vk_layer_settings.h
layer_utils/tests/: CMakeLists.txt  test_util.cpp
scripts/: CMakeLists.txt  generate_source.py  known_good.json  update_deps.py  update_known_good.py
scripts/generators/: base_generator.py  dispatch_table_generator.py  dispatch_table_helper_generator.py  enum_string_helper_generator.py  format_utils_generator.py  function_loader_generator.py  layer_dispatch_table_generator.py  safe_struct_generator.py  struct_helper_generator.py  vulkan_object.py
scripts/gn/: stub.cpp
src/: CMakeLists.txt  vk_layer_settings.cpp
src/layer/: CMakeLists.txt  layer_settings_manager.cpp  layer_settings_manager.hpp  layer_settings_util.cpp  layer_settings_util.hpp  vk_layer_settings.cpp  vk_layer_settings_helper.cpp  vk_layer_settings_interface.cpp
src/vulkan/: CMakeLists.txt  vk_safe_struct_core.cpp  vk_safe_struct_ext.cpp  vk_safe_struct_khr.cpp  vk_safe_struct_manual.cpp  vk_safe_struct_utils.cpp  vk_safe_struct_vendor.cpp
tests/: CMakeLists.txt  safe_struct.cpp  test_formats.cpp  test_function_loader.cpp  test_interface.cpp  test_setting_api.cpp  test_setting_cpp.cpp  test_setting_util.cpp  test_util.cpp
tests/add_subdirectory/: CMakeLists.txt  client.c  client.cpp  vk_dispatch_table.c  vk_enum_string_helper.c  vk_layer_settings.c
tests/find_package/: CMakeLists.txt
tests/format_utils/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/layer/: CMakeLists.txt  test_setting_api.cpp  test_setting_cast.cpp  test_setting_cpp.cpp  test_setting_env.cpp  test_setting_file.cpp  test_setting_util.cpp
tests/struct_helper/: CMakeLists.txt  struct_helper.cpp
tests/vk_dispatch_table/: CMakeLists.txt  test_interface.cpp
tests/vul_dispatch_table/: CMakeLists.txt
