# Copyright 2023-2023 LunarG, Inc.
#
# SPDX-License-Identifier: Apache-2.0

import("//build_overrides/vulkan_utility_libraries.gni")

static_library("vulkan_layer_settings") {
  include_dirs = [ "include" ]
  sources = [
    "include/vulkan/layer/vk_layer_settings.h",
    "include/vulkan/layer/vk_layer_settings.hpp",
    "include/vulkan/layer/vk_layer_settings_ext.h",
    "src/layer/layer_settings_manager.cpp",
    "src/layer/layer_settings_manager.hpp",
    "src/layer/layer_settings_util.cpp",
    "src/layer/layer_settings_util.hpp",
    "src/layer/vk_layer_settings.cpp",
    "src/layer/vk_layer_settings_helper.cpp",
  ]
}
